--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">Asm2_AD_Team1</string>
-    <string-array name="frequency_options">
-        <item>Daily</item>
-        <item>Weekly</item>
-        <item>Monthly</item>
-        <item>Yearly</item>
+
+    <string-array name="expense_categories">
+        <item>Food</item>
+        <item>Transport</item>
+
+        <item>Groceries</item>
+        <item>Study</item>
+        <item>Other</item>
     </string-array>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
